[package]
name = "learn-wgpu-2026"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = ["derive"] }
env_logger = "0.11.8"
glam = { version = "0.30.10", features = ["bytemuck"] }
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg"] }
meshopt = "0.6.2"
pollster = "0.4.0"
tobj = "4.0.3"
wgpu = "28.0.0"
winit = { version = "0.31.0-beta.2", features = ["android-native-activity"] }
